# FinanceTracker-Models

./: .gitignore  LICENSE  QUICKSTART.md  pyproject.toml  setup.py
models/: MANIFEST.in  README.md  __init__.py  base.py  deudas.py  hist_compra_instrumentos_financieros.py  inmuebles.py  liquidez.py  movimientos_bancos.py
models/master/: __init__.py  maestro_activos_financieros.py  maestro_bancos.py  maestro_divisas.py
