[tool.poetry]
name = "finance-tracker-models"
version = "0.1.4"
description = "Shared SQLAlchemy models for Finance Tracker projects"
authors = ["Aitor Fernandez <aitorfernandezcas@gmail.com>"]
readme = "README.md"
packages = [{include = "models"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"
black = "^22.0"
isort = "^5.0"
flake8 = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
